--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,6 +9,11 @@
 MEMORY = 2048
 CPU_COUNT = 2
 
+
+MOUNT_DIRS = {
+  :workspace => {:repo => "workspace", :local => "/home/vagrant/workspace", :owner => "appuser"},
+}
+
 Vagrant.configure("2") do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
@@ -27,7 +32,7 @@ Vagrant.configure("2") do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # NOTE: This will enable public access to the opened port
-  config.vm.network "forwarded_port", guest: 8081, host: 8081
+  # config.vm.network "forwarded_port", guest: 8081, host: 8081
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
@@ -47,7 +52,10 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "workspace", "/home/vagrant/workspace", create: true, nfs: true
+#  config.vm.synced_folder "workspace", "/home/vagrant/workspace", create: true, nfs: true
+  MOUNT_DIRS.each { |k, v|
+    config.vm.synced_folder v[:repo], v[:local], create: true, nfs: true
+  }
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -56,6 +64,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.customize ["modifyvm", :id, "--memory", MEMORY.to_s]
     vb.customize ["modifyvm", :id, "--cpus", CPU_COUNT.to_s]
+  #  vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/v-root", "1"]
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
   #
